# functora.github.io

./: .gitignore  .gitmodules  .ignore  cabal.project
ghcjs/cryptogram/: .ghcid  capacitor.config.json  cryptogram.cabal  default.nix  flake.nix  package.json  trapeze.yaml
ghcjs/cryptogram/lib/: Clipboard.java
ghcjs/cryptogram/nix/: flake-jsback.nix
ghcjs/cryptogram/src/: Main.hs
ghcjs/cryptogram/static/: app.js  site.webmanifest  wasm.html  wasm.js
ghcjs/currency-converter/: .ghcid  .gitignore  .ignore  Main.hs  android.nix  app.cabal  build.sh  cabal.project  capacitor.config.json  default.nix  flake.nix  overlays.nix  package-lock.json  package.json  privacy.md  shell.nix  trapeze.yaml
ghcjs/currency-converter/src/: Main.hs
ghcjs/currency-converter/static/: app.css  app.js  cap.js  ghcjs.html  hashable.js  index.html  main.js  pwa-action-sheet.entry.js  pwa-camera-modal.entry.js  pwa-camera.entry.js  pwa-toast.entry.js  wasm.html  web2.js
ghcjs/invoice-generator/: .ignore  app.cabal  overlays.nix  privacy.md  trapeze.yaml
ghcjs/invoice-generator/static/: app.css  app.js  main.js  web.js
ghcjs/lightning-verifier/: android.nix  capacitor.config.json  default.nix  lightning-verifier.cabal  package-lock.json  package.json  shell.nix  trapeze.yaml  vite.config.ts
ghcjs/lightning-verifier/src/: Main.hs
ghcjs/lightning-verifier/static/: app.css  cap.js  ghcjs.html  hs-bitcoin-hash.js  main.js  pwa-camera-modal-instance.entry.js  pwa-toast.entry.js  site.webmanifest  web4.js  web5.js  web6.js
ghcjs/miso-capa/: miso-capa.cabal
ghcjs/miso-components/: .gitignore  Main.hs  build.sh  cabal.project  default.nix  flake.nix  index.html  index.js  miso-components.cabal  shell.nix
ghcjs/miso-components/Elm/: List.hs
ghcjs/miso-components/Material/: Button.hs  Card.hs  Checkbox.hs  DataTable.hs  Dialog.hs  Elevation.hs  Fab.hs  FormField.hs  HelperText.hs  Icon.hs  IconButton.hs  IconToggle.hs  ImageList.hs  LinearProgress.hs  List.hs  Menu.hs  Prelude.hs  Radio.hs  Ripple.hs  Select.hs  Snackbar.hs  Switch.hs  Tab.hs  TabBar.hs  TextArea.hs  TextField.hs  TopAppBar.hs
ghcjs/miso-functora/: .ghcid  .gitignore  .ignore  LICENSE  Setup.hs  default.nix  miso-capa.cabal  miso-functora.cabal  package-lock.json  package.json  shell.nix  webpack.config.js
ghcjs/miso-functora/js/: jsaddle-compat.js  main.js  main.min.js
ghcjs/miso-functora/lib/: miso-functora.css
ghcjs/miso-widgets/: .ghcid  default.nix  miso-widgets.cabal  package-lock.json  package.json  shell.nix  webpack.config.js
ghcjs/miso-widgets/js/: main.js  main.min.js
pub/bfx/: .ghcid  LICENSE  README.md  bfx.cabal  package.yaml
pub/bfx/.vim/: coc-settings.json
pub/bfx/nix/: tools.nix
pub/bfx/src/: Bfx.hs
pub/bfx/test/: BfxSpec.hs
pub/functora/: .ghcid  CHANGELOG.md  LICENSE  functora.cabal  hie.yaml
pub/functora-hakyll/: .ghcid  .gitignore  .ignore  README.md  build.sh  eval.html  flake.nix  functora-hakyll.cabal  functora.cabal  index.html  license.markdown  redirect-evaluate.html  site.hs
pub/functora-hakyll/.well-known/: assetlinks.json
pub/functora-hakyll/bip39/: 24th-word-calculator.py  wordlist-blue.html  wordlist-cyan.html  wordlist-red.html  wordlist.html
pub/functora-hakyll/blog/: 2020-10-15-sovereign-web-introduction.markdown  2020-10-23-offline-lightning-wallet.markdown  2025-09-16-bitcoin-seed-security.markdown  2025-09-16-secure-bitcoin-seed.markdown  2025-09-18-bitcoin-seed-security.markdown
pub/functora-hakyll/css/: default.css  devicons.min.css
pub/functora-hakyll/index/: 2015-08-01-about.markdown  2015-08-02-skills.markdown  2015-08-03-code.markdown  2015-08-04-blog.html  2015-08-05-contact.html
pub/functora-hakyll/nix/: tools.nix
pub/functora-hakyll/templates/: bip39-dice-calculator.html  bip39-dice.html  blog-archive.html  default.html  index-pairs.html  index-redirect.html  post.html
pub/functora/cfg/: card.toml
pub/functora/nix/: tools.nix
pub/functora/src/: Functora.hs  functora-acme.cabal  functora-ghcjs.cabal
pub/functora/test/: FunctoraSpec.hs
pub/hs-bitcoin-keys/bitcoin-keys/: LICENSE  README.md  bitcoin-keys.cabal  package.json  pkg-ghc.nix  pkg-ghcjs.nix  webpack.config.js
pub/miso/: miso.cabal
pub/miso/examples/: miso-examples.cabal
pub/miso/src/: Miso.hs
pub/network-bitcoin/: .gitignore  .hgignore  CHANGELOG  README.md  network-bitcoin.cabal
pub/witch-mini/: witch-mini.cabal  witch.cabal
pub/xlsx/: .ghcid  .gitignore  xlsx.cabal
pub/xlsx/benchmarks/: Main.hs
pub/xlsx/test/: AutoFilterTests.hs  Common.hs  CommonTests.hs  CondFmtTests.hs  Diff.hs  DrawingTests.hs  Main.hs  PivotTableTests.hs  StreamTests.hs  TestXlsx.hs
rust/cryptonote/: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md
rust/cryptonote/assets/: app.css  bare.min.css  functora.min.css  tailwind.css
rust/cryptonote/src/: clipboard.rs  components.rs  crypto.rs  deep_link.rs  dioxus_elements.rs  encoding.rs  error.rs  hooks.rs  i18n.rs  js.rs  lib.rs  main.rs  markdown.rs  messages.rs  prelude.rs  qr_decode.rs  storage.rs
rust/cryptonote/tests/: crypto_tests.rs  encoding_tests.rs  i18n_tests.rs  qr_decode_tests.rs  signal_integration_tests.rs
rust/functora/: Cargo.toml  README.md
rust/functora-cfg/: Cargo.toml  README.md  bacon.toml
rust/functora-cfg/src/: lib.rs
rust/functora-cfg/tests/: integration.rs
rust/functora-curry/: Cargo.toml  README.md
rust/functora-curry/src/: lib.rs
rust/functora-curry/tests/: curry_tests.rs
rust/functora-dioxus/: Cargo.toml  build.rs
rust/functora-dioxus/assets/: functora.min.css  site.webmanifest
rust/functora-dioxus/src/: app.rs  clipboard.rs  dioxus_elements.rs  error.rs  ffi.rs  i18n.rs  js.rs  lib.rs  messages.rs  nav.rs  qr.rs  storage.rs  traits.rs  widgets.rs
rust/functora-dioxus/tests/: integration_tests.rs  signal_tests.rs  storage_tests.rs
rust/functora-tagged/: Cargo.toml  README.md
rust/functora-tagged-macros/: Cargo.toml  README.md
rust/functora-tagged/.vim/: coc-settings.json
rust/functora-tagged/src/: common.rs  common_impl.rs  infallible.rs  lib.rs  num.rs  refine.rs  (+3 more)
(+1094 files in other folders)
