cabal-version: 2.2
name:          app
version:       0.1.0.2
synopsis:      First miso app
category:      Web
build-type:    Simple

flag ghcid
  manual:  True
  default: False

common pkg
  default-language:   Haskell2010
  js-sources:
    static/app.js
    static/material-components-web.min.js

  ghc-options:
    -Werror -Weverything -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missing-local-signatures -Wno-safe
    -Wno-unsafe -fprint-potential-instances -fwarn-tabs

  if impl(ghc >=8.10.7)
    ghc-options:
      -Wno-prepositive-qualified-module -Wno-missing-safe-haskell-mode

  if impl(ghc >8.10.7)
    ghc-options: -Wno-missing-kind-signatures

  cpp-options:        -Wno-trigraphs
  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    NumericUnderscores
    OverloadedLabels
    OverloadedLists
    OverloadedStrings
    PackageImports
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

executable app
  import:           pkg
  main-is:          Main.hs
  ghcjs-options:    -dedupe
  build-depends:
    , base
    , containers
    , functora-ghcjs
    , fuzzy
    , jsaddle
    , miso
    , miso-components

  if !impl(ghcjs)
    build-depends:
      , bytestring
      , jsaddle-warp
      , wai
      , wai-app-static
      , warp
      , websockets

  if (flag(ghcid) && impl(ghc >=8.10.7))
    ghc-options: -Wno-unused-packages

  default-language: Haskell2010
