cabal-version: 2.2
name:          app
version:       0.1.0.4
synopsis:      First miso app
category:      Web
build-type:    Simple

flag ghcid
  manual:  True
  default: False

common pkg
  other-modules:      Paths_app
  autogen-modules:    Paths_app
  default-language:   Haskell2010
  hs-source-dirs:     src
  js-sources:
    static/app.js
    static/material-components-web.min.js

  other-modules:
    App.Misc
    App.Types
    App.Widgets.Assets
    App.Widgets.Cell
    App.Widgets.Chips
    App.Widgets.Currency
    App.Widgets.Decrypt
    App.Widgets.EditorSettings
    App.Widgets.Field
    App.Widgets.FieldPairs
    App.Widgets.Header
    App.Widgets.IconToggles
    App.Widgets.Main
    App.Widgets.Menu
    App.Widgets.PaymentMethods
    App.Widgets.SwapAmounts
    App.Widgets.Switch

  ghc-options:
    -Werror -Weverything -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missing-local-signatures -Wno-safe
    -Wno-unsafe -fprint-potential-instances -fwarn-tabs

  if impl(ghc >=8.10.7)
    ghc-options:
      -Wno-prepositive-qualified-module -Wno-missing-safe-haskell-mode

  if impl(ghc >8.10.7)
    ghc-options: -Wno-missing-kind-signatures

  cpp-options:        -Wno-trigraphs
  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NumericUnderscores
    OverloadedLabels
    OverloadedLists
    OverloadedStrings
    PackageImports
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  build-depends:
    , barbies
    , base
    , base64-bytestring
    , bytestring
    , containers
    , functora-ghcjs
    , fuzzy
    , jsaddle
    , miso
    , miso-components
    , modern-uri
    , random
    , syb
    , text

  if !impl(ghcjs)
    build-depends:
      , jsaddle-warp
      , wai
      , wai-app-static
      , warp
      , websockets

executable app
  import:        pkg
  main-is:       Main.hs
  ghcjs-options: -dedupe

  if impl(ghcjs)
    ghc-options: -Wno-missing-home-modules
    cpp-options: -DGHCJS_BROWSER

  if !flag(ghcid)
    ghc-options:
      -O2 -optc-O3 -funfolding-use-threshold=16 -threaded -rtsopts
      -with-rtsopts=-N

  if flag(ghcid)
    cpp-options: -DGHCID

  if (flag(ghcid) && impl(ghc >=8.10.7))
    ghc-options: -Wno-unused-packages

test-suite app-test
  import:         pkg
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:  App.TypesSpec
  build-depends:
    , aeson
    , hspec
    , optics-core
    , QuickCheck
    , quickcheck-instances
