cabal-version: 2.2
name:          lightning-verifier
version:       0.1.0.1
synopsis:      Lightning Verifier
category:      Web
build-type:    Simple

flag ghcid
  manual:  True
  default: False

common pkg
  other-modules:      Paths_lightning_verifier
  autogen-modules:    Paths_lightning_verifier
  default-language:   Haskell2010
  hs-source-dirs:     src

  if impl(ghcjs)
    js-sources: static/app.js

  else
    js-sources:
      static/app.js
      static/hashable.js
      static/material-components-web.min.js

  other-modules:
    App.Misc
    App.Types
    App.Widgets.Bolt11
    App.Widgets.Decrypt
    App.Widgets.Fav
    App.Widgets.Main
    App.Widgets.Menu
    App.Widgets.Templates

  ghc-options:
    -Werror -Weverything -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missing-local-signatures -Wno-safe
    -Wno-unsafe -fprint-potential-instances -fwarn-tabs

  if impl(ghc >=8.10.7)
    ghc-options:
      -Wno-prepositive-qualified-module -Wno-missing-safe-haskell-mode

  if impl(ghc >8.10.7)
    ghc-options: -Wno-missing-kind-signatures

  if impl(ghc >=9.8)
    ghc-options: -Wno-missing-role-annotations

  cpp-options:        -Wno-trigraphs
  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NumericUnderscores
    OverloadedLabels
    OverloadedLists
    OverloadedStrings
    PackageImports
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  build-depends:
    , async
    , barbies
    , base
    , base16-bytestring
    , base64-bytestring
    , binary
    , bitcoin-address
    , bytestring
    , containers
    , functora-ghcjs
    , fuzzy
    , jsaddle
    , miso
    , miso-components
    , miso-widgets
    , modern-uri
    , network-uri
    , qrcode-core
    , random
    , syb
    , text
    , uglymemo

  if os(wasi)
    build-depends: jsaddle-wasm
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"

executable lightning-verifier
  import:        pkg
  main-is:       Main.hs
  ghcjs-options: -dedupe
  build-depends: containers

  if !((impl(ghcjs) || arch(javascript)) || os(wasi))
    build-depends:
      , jsaddle-warp
      , wai
      , wai-app-static
      , warp
      , websockets

  if impl(ghcjs)
    ghc-options: -Wno-missing-home-modules
    cpp-options: -DGHCJS_BROWSER

  if !flag(ghcid)
    ghc-options: -O2 -optc-O3 -funfolding-use-threshold=16

  if (!flag(ghcid) && !os(wasi))
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  if flag(ghcid)
    cpp-options: -DGHCID

  if (flag(ghcid) && impl(ghc >=8.10.7))
    ghc-options: -Wno-unused-packages

test-suite lightning-verifier-test
  import:         pkg
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:  App.TypesSpec
  build-depends:
    , aeson
    , hspec
    , optics-core
    , quickcheck-instances
