cabal-version: 2.2
name:          miso-capa
version:       0.1.0.0
synopsis:      Miso Capa
category:      Web
build-type:    Simple

flag ghcid
  manual:  True
  default: False

common pkg
  default-language:   Haskell2010
  other-modules:      Paths_miso_capa
  ghc-options:
    -Werror -Weverything -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missing-local-signatures -Wno-safe
    -Wno-unsafe -fprint-potential-instances -fwarn-tabs

  if impl(ghc >=8.10.7)
    ghc-options:
      -Wno-prepositive-qualified-module -Wno-missing-safe-haskell-mode

  if impl(ghc >8.10.7)
    ghc-options: -Wno-missing-kind-signatures

  if impl(ghc >=9.8)
    ghc-options:
      -Wno-missing-role-annotations -Wno-missing-poly-kind-signatures

  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NumericUnderscores
    OverloadedLabels
    OverloadedLists
    OverloadedStrings
    PackageImports
    PolyKinds
    QuantifiedConstraints
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  build-depends:
    , barbies
    , base
    , bytestring
    , functora-ghcjs
    , fuzzy
    , jsaddle
    , miso
    , miso-components
    , modern-uri
    , monoid-subclasses
    , qrcode-core
    , syb
    , uglymemo

  if (impl(ghcjs) || arch(javascript))
    build-depends: ghcjs-base
    js-sources:    js/main.min.js

library
  import:          pkg
  hs-source-dirs:  src

  if flag(ghcid)
    cpp-options: -DGHCID

  if (flag(ghcid) && impl(ghc >=8.10.7))
    ghc-options: -Wno-unused-packages

  exposed-modules:
    Functora.Miso.Capa.BrowserLink
    Functora.Miso.Capa.Currency
    Functora.Miso.Capa.Dialog
    Functora.Miso.Capa.Field
    Functora.Miso.Capa.FieldPairs
    Functora.Miso.Capa.Flex
    Functora.Miso.Capa.Grid
    Functora.Miso.Capa.Header
    Functora.Miso.Capa.Money
    Functora.Miso.Capa.Qr
    Functora.Miso.Capa.Switch
    Functora.Miso.Css
    Functora.Miso.Jsm
    Functora.Miso.Jsm.Generic
    Functora.Miso.Jsm.Specific
    Functora.Miso.Orphan
    Functora.Miso.Prelude
    Functora.Miso.Types

test-suite miso-capa-test
  import:         pkg
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:  Functora.Miso.TypesSpec
  build-depends:
    , aeson
    , hspec
    , optics-core
    , quickcheck-instances

  if flag(ghcid)
    hs-source-dirs: src
    other-modules:
      Functora.Miso.Capa.BrowserLink
      Functora.Miso.Capa.Currency
      Functora.Miso.Capa.Dialog
      Functora.Miso.Capa.Field
      Functora.Miso.Capa.FieldPairs
      Functora.Miso.Capa.Flex
      Functora.Miso.Capa.Grid
      Functora.Miso.Capa.Money
      Functora.Miso.Capa.Qr
      Functora.Miso.Capa.Switch
      Functora.Miso.Css
      Functora.Miso.Jsm
      Functora.Miso.Jsm.Generic
      Functora.Miso.Jsm.Specific
      Functora.Miso.Orphan
      Functora.Miso.Prelude
      Functora.Miso.Types

  else
    build-depends: miso-capa
