cabal-version: 2.2
name:          miso-widgets
version:       0.1.0.0
synopsis:      Miso widgets
category:      Web
build-type:    Simple

flag ghcid
  manual:  True
  default: False

common pkg
  default-language:   Haskell2010
  other-modules:      Paths_miso_widgets
  ghc-options:
    -Werror -Weverything -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missing-local-signatures -Wno-safe
    -Wno-unsafe -fprint-potential-instances -fwarn-tabs

  if impl(ghc >=8.10.7)
    ghc-options:
      -Wno-prepositive-qualified-module -Wno-missing-safe-haskell-mode

  if impl(ghc >8.10.7)
    ghc-options: -Wno-missing-kind-signatures

  if impl(ghc >=9.8)
    ghc-options: -Wno-missing-role-annotations

  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NumericUnderscores
    OverloadedLabels
    OverloadedLists
    OverloadedStrings
    PackageImports
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  build-depends:
    , async
    , barbies
    , base
    , base64-bytestring
    , binary
    , bytestring
    , containers
    , functora-ghcjs
    , fuzzy
    , jsaddle
    , miso
    , miso-components
    , modern-uri
    , network-uri
    , qrcode-core
    , random
    , syb
    , text
    , uglymemo

library
  import:          pkg
  hs-source-dirs:  src
  build-depends:   containers

  if flag(ghcid)
    cpp-options: -DGHCID

  if (flag(ghcid) && impl(ghc >=8.10.7))
    ghc-options: -Wno-unused-packages

  exposed-modules:
    Functora.Miso.Css
    Functora.Miso.Jsm
    Functora.Miso.Prelude
    Functora.Miso.Types
    Functora.Miso.Widgets.Assets
    Functora.Miso.Widgets.BrowserLink
    Functora.Miso.Widgets.Chips
    Functora.Miso.Widgets.Currency
    Functora.Miso.Widgets.Dialog
    Functora.Miso.Widgets.Field
    Functora.Miso.Widgets.FieldPairs
    Functora.Miso.Widgets.Frame
    Functora.Miso.Widgets.Grid
    Functora.Miso.Widgets.Header
    Functora.Miso.Widgets.IconToggles
    Functora.Miso.Widgets.Money
    Functora.Miso.Widgets.PaymentMethods
    Functora.Miso.Widgets.Qr
    Functora.Miso.Widgets.Switch

test-suite miso-widgets-test
  import:         pkg
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:  Functora.Miso.TypesSpec
  build-depends:
    , aeson
    , hspec
    , optics-core
    , quickcheck-instances

  if flag(ghcid)
    hs-source-dirs: src
    other-modules:
      Functora.Miso.Css
      Functora.Miso.Jsm
      Functora.Miso.Prelude
      Functora.Miso.Types
      Functora.Miso.Widgets.Assets
      Functora.Miso.Widgets.BrowserLink
      Functora.Miso.Widgets.Chips
      Functora.Miso.Widgets.Currency
      Functora.Miso.Widgets.Dialog
      Functora.Miso.Widgets.Field
      Functora.Miso.Widgets.FieldPairs
      Functora.Miso.Widgets.Frame
      Functora.Miso.Widgets.Grid
      Functora.Miso.Widgets.Header
      Functora.Miso.Widgets.IconToggles
      Functora.Miso.Widgets.Money
      Functora.Miso.Widgets.PaymentMethods
      Functora.Miso.Widgets.Qr
      Functora.Miso.Widgets.Switch

  else
    build-depends: miso-widgets
