cabal-version:   3.0
author:          functora
build-type:      Simple
category:        API
copyright:       functora
description:     Bitfinex client
extra-doc-files:
  ChangeLog.md
  README.md

license-file:    LICENSE
license:         BSD-3-Clause
maintainer:      functora@proton.me
name:            bfx
synopsis:        Bitfinex client
version:         0.1.0.0
homepage:
  https://github.com/functora/functora.github.io/tree/master/pub/bfx

flag ghcid
  manual:  True
  default: False

common pkg
  default-language:   Haskell2010
  other-modules:      Paths_bfx
  ghc-options:
    -Werror -Weverything -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missing-local-signatures -Wno-safe
    -Wno-unsafe -fprint-potential-instances -fwarn-tabs

  if impl(ghc >=8.10.7)
    ghc-options:
      -Wno-prepositive-qualified-module -Wno-missing-safe-haskell-mode
      -Wno-missing-kind-signatures

    default-extensions: StandaloneKindSignatures

  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NumericUnderscores
    OverloadedLabels
    OverloadedLists
    OverloadedStrings
    PackageImports
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

common pkg-lib
  import:         pkg
  hs-source-dirs: src
  build-depends:
    , aeson
    , base               >=4.7 && <5
    , base16-bytestring
    , bytestring
    , containers
    , cryptonite
    , envparse
    , functora
    , functora:cfg
    , functora:money
    , functora:sql
    , http-client
    , http-client-tls
    , http-types
    , katip
    , lens-aeson
    , memory
    , siggy-chardust
    , temporary
    , text
    , transformers
    , units
    , unliftio
    , vector

library
  import:          pkg-lib
  other-modules:   Paths_bfx

  if flag(ghcid)
    ghc-options: -Wno-unused-packages

  exposed-modules:
    Bfx
    Bfx.Class.FromRpc
    Bfx.Class.ToBaseUrl
    Bfx.Class.ToPathPieces
    Bfx.Class.ToRequestMethod
    Bfx.Class.ToRequestParam
    Bfx.Data.CancelOrderMulti
    Bfx.Data.Candles
    Bfx.Data.Env
    Bfx.Data.FeeSummary
    Bfx.Data.GetOrders
    Bfx.Data.Kind
    Bfx.Data.MarketAveragePrice
    Bfx.Data.SubmitOrder
    Bfx.Data.Type
    Bfx.Data.Wallets
    Bfx.Data.Web
    Bfx.Import
    Bfx.Import.External
    Bfx.Import.Internal
    Bfx.Indicator.Atr
    Bfx.Indicator.Ma
    Bfx.Indicator.Tr
    Bfx.Math
    Bfx.Orphan
    Bfx.Parser
    Bfx.Rpc.Generic
    Bfx.Util

test-suite bfx-test
  import:         pkg
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:
    Bfx.Data.CancelOrderMultiSpec
    Bfx.Data.SubmitOrderSpec
    Bfx.Data.TypeSpec
    Bfx.TestEnv
    BfxSpec
    Paths_bfx

  build-depends:
    , aeson
    , base
    , bfx
    , containers
    , hspec

  if flag(ghcid)
    other-modules:
      Bfx
      Bfx.Class.FromRpc
      Bfx.Class.ToBaseUrl
      Bfx.Class.ToPathPieces
      Bfx.Class.ToRequestMethod
      Bfx.Class.ToRequestParam
      Bfx.Data.CancelOrderMulti
      Bfx.Data.Candles
      Bfx.Data.Env
      Bfx.Data.FeeSummary
      Bfx.Data.GetOrders
      Bfx.Data.Kind
      Bfx.Data.MarketAveragePrice
      Bfx.Data.SubmitOrder
      Bfx.Data.Type
      Bfx.Data.Wallets
      Bfx.Data.Web
      Bfx.Import
      Bfx.Import.External
      Bfx.Import.Internal
      Bfx.Indicator.Atr
      Bfx.Indicator.Ma
      Bfx.Indicator.Tr
      Bfx.Math
      Bfx.Orphan
      Bfx.Parser
      Bfx.Rpc.Generic
      Bfx.Util

    hs-source-dirs: src
    ghc-options:    -Wno-unused-packages
    build-depends:
      , aeson
      , base               >=4.7 && <5
      , base16-bytestring
      , bytestring
      , containers
      , cryptonite
      , envparse
      , functora
      , functora:cfg
      , functora:money
      , functora:sql
      , http-client
      , http-client-tls
      , http-types
      , katip
      , lens-aeson
      , memory
      , siggy-chardust
      , temporary
      , text
      , transformers
      , units
      , unliftio
      , vector

  else
    build-depends: bfx
