name:               functora
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base >= 4.0
                  , hakyll >= 4.13.0
                  , filepath  >= 1.0 && < 1.5
  ghc-options:      -threaded
  default-language: Haskell2010
